--- a/app/src/main/assets/assets/style.css
+++ b/app/src/main/assets/assets/style.css
@@ -49,6 +49,10 @@ body {
 	height: 100% !important;
 	max-height: 100% !important;
 	width: 100% !important;
+	max-width: 100% !important;
+
+	margin-right: 0px !important;
+	margin-left: 0px !important;
 }
 
 .pin-key {
